--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,3 @@
-server.port=8443
-server.ssl.enabled=true
-server.ssl.key-store=keystore.p12
-server.ssl.key-store-password=123456
-server.ssl.keyStoreType=PKCS12
-server.ssl.keyAlias=localdomain
+keystore-file=keystore.p12
+keystore-pass=123456
+keystore-type=PKCS12
