--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,7 @@ repositories {
 
 dependencies {
 	implementation('org.springframework.boot:spring-boot-starter-web')
+	implementation('org.apache.commons:commons-lang3:3.1')
 	implementation('org.cryptacular:cryptacular:1.2.2')
 	runtimeOnly('org.springframework.boot:spring-boot-devtools')
 	testImplementation('org.springframework.boot:spring-boot-starter-test')
